updating my files

--- a/javascript/dom.html
+++ b/javascript/dom.html
@@ -5,10 +5,13 @@
 
 <script>
 
-// document.getElementById("test").innerHTML = "Hello by ID";
+var t = document.getElementById("test");
+    t.innerHTML = "Hello by ID";
 // document.getElementsByTagName("div")[0].innerHTML = "Hello by Tag";
-document.getElementsByClassName("t_class")[0].innerHTML = "Hello by Class";
-
+ //document.getElementsByClassName("t_class")[0].innerHTML = "Hello by Class";
+//alert(t.innerHTML);
+    console.log(t.innerHTML); // this is to show a pop-up menu message
+    
 </script>
 
 </body>
