--- a/javascript/ex.html
+++ b/javascript/ex.html
@@ -11,7 +11,10 @@
 /*
 Your code goes here
 */
-
+ document.getElementsByClassName("p")[0].innerHTML= 
+    "this is the first P";
+    document.getElementsByTagName("p")[0].innerHTML= 
+    "this is the first P";
 
 </script>
 
