--- a/javascript/attribute.html
+++ b/javascript/attribute.html
@@ -18,6 +18,11 @@
 			border-radius: 20px;
 		}
 		
+        p {
+            font-size: 50px;
+            font-family: monospace;
+            color: orange;
+        
 	</style>
 </head>
 
