just updating repo

--- a/php/ajax.html
+++ b/php/ajax.html
@@ -69,6 +69,7 @@ function test1(xhttps){
 
 function test2(xhttps){
 	var text = xhttps.responseText;
+    //array of sentences in ex.php file 
 	var tokens = text.split("<br>");
 	console.log(tokens);
 
