--- a/bootstrap/layout.html
+++ b/bootstrap/layout.html
@@ -42,13 +42,19 @@
       background: white;
     }
     
+        div.fixed{
+            width:200px;
+            flex-basis: unset;
+            flex-grow: unset;
+        }
     </style>
   </head>
   <body>
-
+      
+<!--container 2-->
     <div class="container" >    
     </div>
-
+<!--container 3-->
     <div class="container-fluid" >    
     </div>
 
